# stockrock

./: .env.example  .gitignore  README.md  memory.md  pyproject.toml  requirements.txt  screener.py  stocks.csv
stockrock/: __init__.py  ai.py  broker.py  config.py  data.py  engine.py  investja.py  main.py  model.py  notifier.py  portfolio.py  report.py  spam.py  strategy.py  swarm.py  telegram_setup.py  ui.py  ui_spam.py  universe.py
